# Bluetooth-Audio-Visualizer

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  lcd_fb.v  top.lpf  top.v
TESTING_PROJ/: CMakeLists.txt  TESTING_PROJ.c  TESTING_PROJ_new.c  btstack_config.h  lwipopts.h
TESTING_PROJ/proj/: .gitignore  CMakeLists.txt
hw/: top.lpf  top.v
icesugar-pro-framebuffer/: CMakeLists.txt  README.md  top.lpf
icesugar-pro-framebuffer/hw/: top.bit  top.json  top.svf  top_out.config
icesugar-pro-framebuffer/src/: sdCard.sv  spi.sv
icesugar-pro-framebuffer/sw/include/: audio_buffer.h  lvgl_oscilloscope.h
icesugar-pro-framebuffer/sw/src/: lvgl_oscilloscope.cpp  main.cpp
src/: CMakeCache.txt  CMakeLists.txt  a2dp_sink.c  audio_buffer.cpp  audio_buffer.h  audio_fallback.cpp  audio_fallback.h  audio_pwm_output.cpp  audio_pwm_output.h  bt_visualizer.gatt  btstack_config.h  lcd.sv  lvgl_oscilloscope.cpp  lvgl_oscilloscope.h  main.c  main.cpp  sd_spi_probe.cpp  sd_spi_probe.h  sd_wav_fallback.cpp  sd_wav_fallback.h  top.sv
src/speaker/: speaker.c
sw/: CMakeLists.txt
sw/include/: btstack_config.h  lvgl_touch.h
sw/src/: lvgl_oscilloscope.cpp  lvgl_touch.cpp  main.cpp
